--- a/css/custom.css
+++ b/css/custom.css
@@ -30,6 +30,10 @@ form h6{
   margin: 0;
 }
 
+.card-image {
+  padding-top: 10px;
+}
+
 .card-action button, form button{
   width: 100%;
 }
@@ -93,6 +97,11 @@ form h6{
   background-image: url("../img/lungs.png");
 }
 
+
+#liver {
+  background-image: url("../img/liver.png");
+}
+
 #tools {
   background-image: url("../img/tools.png");
 }
@@ -122,3 +131,8 @@ form h6{
  .wrap {
    margin-top: 30px;
  }
+
+input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime].valid, input[type=datetime]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid {
+  border-bottom: 1px solid #E91E63;
+  box-shadow: 0 1px 0 0 #E91E63;
+}
